--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: pipeline
 on:
   push:
     branches:
-      - "go_app_compose_cdci"
+      - main
 
 jobs:
   deploy:
@@ -29,4 +29,4 @@ jobs:
         with:
           context: ./docker
           push: true
-          tags: linhbngo/go_server:latest
+          tags: tasmia9347/go_server:latest
